--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["6285954184111@s.whatsapp.net","6285954184111@s.whatsapp.net"],
+    "ownerName": "GOPALA5U",
+    "instagram" : "https://instagram.com/fuze.page",
+    "botName": "𝙁𝙐𝙕𝙀 𝙋𝘼𝙂𝙀",
+    "footer": "FUZE.PAGE",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
-    "autobio": true,
+    "autobio": false,
     "anticall": true,
     "autorespond": false,
     "autoblok": false,
